Refactor java17